{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 48,
  "lineage": "d62f865c-01ce-7c39-b44b-e35318db0b77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:security-group/sg-067f848711d67b302",
            "description": "chiholee-common-sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067f848711d67b302",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP traffic",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "Allow all inbound traffic from self",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "chiholee-common-sg",
            "name_prefix": "",
            "owner_id": "058264542355",
            "revoke_rules_on_delete": false,
            "tags": {
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:security-group/sg-0204a9be701b2ccf1",
            "description": "Control traffic to/from RDS Aurora chiholee",
            "egress": [],
            "id": "sg-0204a9be701b2ccf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "webserver",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-067f848711d67b302"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "chiholee-db-sg-20240601100241984400000005",
            "name_prefix": "chiholee-db-sg-",
            "owner_id": "058264542355",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "chiholee-db-sg",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-sg",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.aurora",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "vpc_ingress",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/24",
              "10.0.1.0/24"
            ],
            "description": "",
            "from_port": 3306,
            "id": "sgrule-1403941109",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0204a9be701b2ccf1",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.aurora.aws_security_group.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065b5b5c3dfb4ce52",
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:elastic-ip/eipalloc-065b5b5c3dfb4ce52",
            "association_id": "eipassoc-08d794c087c4cf5b1",
            "domain": "vpc",
            "id": "eipalloc-065b5b5c3dfb4ce52",
            "network_border_group": "ap-northeast-2",
            "network_interface": "eni-0c882e3ff1a2a847d",
            "private_dns": "ip-10-0-4-160.ap-northeast-2.compute.internal",
            "private_ip": "10.0.4.160",
            "public_dns": "ec2-3-37-192-180.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.37.192.180",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:internet-gateway/igw-0d5974fe4570e7173",
            "id": "igw-0d5974fe4570e7173",
            "owner_id": "058264542355",
            "tags": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-065b5b5c3dfb4ce52",
            "association_id": "eipassoc-08d794c087c4cf5b1",
            "connectivity_type": "public",
            "id": "nat-0c003592207ad9f6a",
            "network_interface_id": "eni-0c882e3ff1a2a847d",
            "private_ip": "10.0.4.160",
            "public_ip": "3.37.192.180",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ed3e85474ee88429",
            "tags": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06d349d4b3d2fdae91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c003592207ad9f6a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06d349d4b3d2fdae9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0d5974fe4570e7173",
            "id": "r-rtb-0e0b3cb8258b40ec91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e0b3cb8258b40ec9",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:route-table/rtb-06d349d4b3d2fdae9",
            "id": "rtb-06d349d4b3d2fdae9",
            "owner_id": "058264542355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c003592207ad9f6a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chiholee-private",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:route-table/rtb-0e0b3cb8258b40ec9",
            "id": "rtb-0e0b3cb8258b40ec9",
            "owner_id": "058264542355",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d5974fe4570e7173",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "chiholee-public",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac2062c5a9296ca9",
            "route_table_id": "rtb-06d349d4b3d2fdae9",
            "subnet_id": "subnet-0445225277443784c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018272eae27473a78",
            "route_table_id": "rtb-06d349d4b3d2fdae9",
            "subnet_id": "subnet-05fbb9d997d2c9a28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c7b11a63cd148bd",
            "route_table_id": "rtb-06d349d4b3d2fdae9",
            "subnet_id": "subnet-01f2901f1a7c1f651"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068e8dd4a24f39dca",
            "route_table_id": "rtb-06d349d4b3d2fdae9",
            "subnet_id": "subnet-066a17300c14772ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05bd66a04d17d8c45",
            "route_table_id": "rtb-0e0b3cb8258b40ec9",
            "subnet_id": "subnet-0ed3e85474ee88429"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01cc097ac1623432c",
            "route_table_id": "rtb-0e0b3cb8258b40ec9",
            "subnet_id": "subnet-08055ee027e3fcb89"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-0445225277443784c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.8.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0445225277443784c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-db-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-05fbb9d997d2c9a28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.9.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05fbb9d997d2c9a28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-db-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-db-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-01f2901f1a7c1f651",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f2901f1a7c1f651",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-private-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-066a17300c14772ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-066a17300c14772ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-private-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-private-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-0ed3e85474ee88429",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ed3e85474ee88429",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-public-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public-ap-northeast-2a",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:subnet/subnet-08055ee027e3fcb89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2b",
            "availability_zone_id": "apne2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08055ee027e3fcb89",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "058264542355",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "chiholee-public-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee-public-ap-northeast-2b",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "vpc_id": "vpc-06350b49d5e24cdba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:058264542355:vpc/vpc-06350b49d5e24cdba",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06f8a2da7882040d5",
            "default_route_table_id": "rtb-0a6fd0c6388fb876d",
            "default_security_group_id": "sg-03df22a71423dfa08",
            "dhcp_options_id": "dopt-04697e58ea4a0227e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06350b49d5e24cdba",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6fd0c6388fb876d",
            "owner_id": "058264542355",
            "tags": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            },
            "tags_all": {
              "Name": "chiholee",
              "identifier": "chiholee",
              "terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}